--- a/styles/Form.module.css
+++ b/styles/Form.module.css
@@ -1,6 +1,3 @@
-.red {
-  color: red;
-}
 .container {
   max-width: 800px;
   margin: 0 auto;
@@ -21,4 +18,13 @@
   grid-row: 3/4;
   grid-column: 2/4;
   background-color: aqua;
+}
+
+.story {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.story p {
+  font-size: large;
 }
